--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-export-default-from": "^7.12.13",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "material-table": "^1.57.2",
