--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@material-ui/icons": "^4.9.1",
     "material-table": "^1.57.2",
     "next": "10.0.8",
+    "nprogress": "^0.2.0",
     "pure-react-carousel": "^1.26.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-responsive-carousel": "^3.1.51",
     "styled-components": "^5.0.1"
   }
