--- a/platina-the-wolf-and-the-heir-of-the-light/package.json
+++ b/platina-the-wolf-and-the-heir-of-the-light/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "",
-    "main": "index.html",
-    "js-flags": "--expose-gc",
-    "window": {
-        "title": "",
-        "toolbar": false,
-        "width": 816,
-        "height": 624,
-        "icon": "icon/icon.png"
-    }
+  "name": "",
+  "main": "index.html",
+  "version": "0.10.0",
+  "js-flags": "--expose-gc",
+  "window": {
+      "title": "",
+      "toolbar": false,
+      "width": 816,
+      "height": 624,
+      "icon": "icon/icon.png"
+  }
 }
